--- a/BaltaBot.Domain.Infra/BaltaBot.Domain.Infra.csproj
+++ b/BaltaBot.Domain.Infra/BaltaBot.Domain.Infra.csproj
@@ -9,6 +9,9 @@
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.123" />
     <PackageReference Include="Dapper.Contrib" Version="2.0.78" />
+    <PackageReference Include="FluentMigrator" Version="3.3.2" />
+    <PackageReference Include="FluentMigrator.Runner" Version="3.3.2" />
+    <PackageReference Include="FluentMigrator.Runner.SQLite" Version="3.3.2" />
     <PackageReference Include="Microsoft.Data.SqlClient" Version="5.1.0" />
     <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.4" />
   </ItemGroup>
