--- a/BaltaBot.Domain.Api/BaltaBot.Domain.Api.csproj
+++ b/BaltaBot.Domain.Api/BaltaBot.Domain.Api.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="Discord.Net.WebSocket" Version="3.9.0" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="7.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Http" Version="7.0.0" />
   </ItemGroup>
 
   <ItemGroup>
